<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="first_preferencescreen"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        android:title="@string/title_first_section">

        <ListPreference
            android:defaultValue="@string/pf_dark_auto"
            android:dialogTitle="@string/pf_dark_dialog"
            android:entries="@array/light_theme"
            android:entryValues="@array/light_theme_value"
            app:key="@string/pf_key_light"
            app:summary="@string/pf_content_message"
            app:title="@string/pf_light_title" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/title_second_section">

        <Preference
            android:title="Backup"
            android:key="@string/backup_button"
            android:summary="Backup Your Data to and from different formats">
            <intent
                android:action="android.intent.action.VIEW"
                android:targetPackage="de.nb.spotter"
                android:targetClass="de.nb.spotter.BackupActivity" />
        </Preference>

        <Preference
            android:title="@string/title_intent_preference">
            <intent android:action="android.intent.action.VIEW"
                android:data="https://www.youtube.com/watch?v=EA0DPBLJnzc" />
        </Preference>

    </PreferenceCategory>
</PreferenceScreen>